# consigaz-robo

./: .env.example  .gitignore  CHECKS.md  CLAUDE.md  README.md  prd_automacao_rpa.md  pyproject.toml  tasks.py
.specs/features/m0-foundation/: design.md  spec.md  tasks.md
.specs/features/m1-desktop-layer/: design.md  spec.md  (+1 more)
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
config/: selectors.json
config/prompts/: pilot-smoke.md
docs/: implantacao-cliente-totvs.md  scheduling.md
scripts/: web_search_demo.py
src/: platform_info.py
src/config/: __init__.py  display.py  keyring_source.py  settings.py
src/desktop/: __init__.py  exceptions.py  interactions.py  vision.py
src/intelligence/: __init__.py  analysis.py  exceptions.py  llm.py  prompts.py  router.py  types.py  validation.py
src/logger/: __init__.py  processors.py  screenshot_hook.py  setup.py
src/orchestrator/: __init__.py  __main__.py  boot.py  cli.py  context.py  dispatch.py  exceptions.py  registry.py  summary.py  types.py
src/platform_info/: __init__.py
src/routines/: __init__.py  pilot_smoke.py
src/web/: __init__.py  exceptions.py  forms.py  navigation.py  selectors.py  session.py
tests/: test_config_display.py  test_config_keyring_source.py  test_config_settings.py  test_logger_processors.py  test_logger_screenshot_hook.py  test_logger_setup.py  test_orchestrator_boot.py  test_orchestrator_cli.py  test_orchestrator_e2e.py  test_platform_info.py
tests/desktop/: test_exceptions.py  test_interactions.py  test_mac_adapter.py  test_platform_adapter.py  test_vision.py  test_win_adapter.py
tests/intelligence/: conftest.py  test_analysis.py  test_exceptions.py  test_llm.py  test_prompts.py  test_router.py  test_schemas_registry.py  test_types.py  test_validation.py
tests/test_assets/: test_pilot_smoke_templates.py
tests/test_config/: test_selectors_pilot_smoke.py
tests/test_intelligence/: conftest.py  test_cost_snapshot.py  test_prompts_pilot_smoke.py  test_schemas_pilot_smoke.py
tests/test_orchestrator/: conftest.py  test_cli_m4.py  test_context.py  test_dispatch.py  test_exceptions.py  test_public_api.py  test_registry.py  test_summary.py  test_types.py
tests/test_routines/: conftest.py  test_pilot_smoke_e2e.py  test_pilot_smoke_unit.py
tests/web/: test_exceptions.py  test_forms.py  test_navigation.py  test_selectors.py  test_session.py
(+26 files in other folders)
